# NoProto

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  idl.graphql  idl.js  void-rules.toml
bench/: Cargo.toml  README.md
bench/src/: bench.fbs  bench_fb.rs  bench_generated.rs  bench_pb.proto  bench_pb.rs  main.rs  run_bench_abomonation.rs  run_bench_avro.rs  run_bench_bincode.rs  run_bench_bson.rs  run_bench_flatbuffers.rs  run_bench_flexbuffers.rs  run_bench_json.rs  run_bench_messagepack-old.rs  run_bench_messagepack.rs  run_bench_messagepack_rs.rs  run_bench_no_proto.rs  run_bench_postcard.rs  run_bench_prost.rs  run_bench_protocol_buffers.rs  run_bench_rawbson.rs  run_bench_rkyv.rs  run_bench_serde_json.rs
conformance/: README.md
docs/: monorepo.md
examples/: quick.rs
no_proto_js/: Cargo.toml  out.txt
no_proto_js/src/: buffer.rs  json_flex.rs  lib.rs  lib_wasm.rs  memory.rs  schema.rs  utils.rs  wasm.rs
no_proto_js/src/collection/: list.rs  map.rs  mod.rs  table.rs  tuple.rs
no_proto_js/src/pointer/: any.rs  bool.rs  bytes.rs  date.rs  dec.rs  geo.rs  mod.rs  numbers.rs  option.rs  string.rs  ulid.rs  uuid.rs
no_proto_rs/: CHANGELOG.md  Cargo.toml  README.md
no_proto_rs/src/: buffer.rs  buffer_ro.rs  error.rs  format.rs  hashmap.rs  idl.rs  json_flex.rs  lib.rs  map.rs  memory.rs  new_idl.rs  rpc.rs  schema.rs  types.rs  utils.rs
no_proto_rs/src/buffer/: mod.rs  type_parser.rs
no_proto_rs/src/collection/: list.rs  map.rs  mod.rs  struc.rs  table.rs  tuple.rs
no_proto_rs/src/pointer/: any.rs  bool.rs  bytes.rs  date.rs  dec.rs  geo.rs  mod.rs  numbers.rs  option.rs  portal.rs  string.rs  ulid.rs  union.rs  uuid.rs
no_proto_rs/src/schema/: args.rs  ast.rs  ast_parser.rs  mod.rs  parser.rs  schema_args.rs  schema_parser.rs  tests.rs
no_proto_rs/src/values/: mod.rs
no_proto_rs_old/src/: lib.rs  memory.rs  new_idl.rs  rpc.rs
no_proto_rs_old/src/collection/: mod.rs
no_proto_rs_old/src/pointer/: any.rs  bool.rs  date.rs  dec.rs  geo.rs  numbers.rs  string.rs
spec/: README.md
src/: buffer.rs  buffer_ro.rs  collection_table.rs  error.rs  format.rs  hashmap.rs  json_flex.rs  lib.rs  lib_old.rs  memory.rs  pointer.rs  rpc.rs  schema.rs  utils.rs
src/buffers/: mod.rs
src/collection/: iter.rs  list.rs  map.rs  mod.rs  table.rs  tuple.rs
src/pointer/: any.rs  bool.rs  bytes.rs  date.rs  dec.rs  geo.rs  misc.rs  mod.rs  numbers.rs  option.rs  string.rs  types.rs  ulid.rs  uuid.rs
