[package]
name = "bench"
version = "0.1.0"
authors = ["scottlott"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flatbuffers = "0.7.0"
flate2 = "1.0.19"
json = "0.12.4"
messagepack-rs = "0.8.0"
# no_proto = { path = "../" }
protobuf = "2.18.1"
# no_proto = "0.4.2"
rand = "0.7.3"


[target.x86_64-apple-darwin]
rustflags = ["-Ctarget-cpu=native"]
