[package]
name = "bench"
version = "0.1.0"
authors = ["scottlott"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abomonation = "0.7.3"
abomonation_derive = "0.5.0"
avro-rs = "0.12.0"
bincode = "1.3.1"
bson = "1.1.0"
bytes = "1.0.0"
flatbuffers = "0.7.0"
flate2 = "1.0.19"
flexbuffers = "0.2.1"
json = "0.12.4"
messagepack-rs = "0.8.0"
no_proto = { path = "../no_proto_rs" }
prost = "0.7.0"
protobuf = "2.18.1"
rand = "0.7.3"
rawbson = "0.2.0"
rkyv = "0.3.0"
rmp = "0.8.9"
rmp-serde = "0.15.1"
rmpv = "0.4.6"
serde = "1.0.118"

[target.x86_64-apple-darwin]
rustflags = ["-Ctarget-cpu=native"]
