[package]
name = "no_proto"
license = "MIT"
version = "0.7.2"
description = "Simple, Performant & Safe Zero-Copy Serialization with RPC.  Performance of Protocol Buffers with flexibility of JSON."
homepage = "https://github.com/only-cliches/NoProto"
repository = "https://github.com/only-cliches/NoProto"
documentation="https://docs.rs/crate/no_proto/"
authors = ["Scott Lott <me@scottlott.com>"]
readme = "README.md"
edition = "2018"
exclude = ["bench/**/*"]
categories = ["data-structures", "embedded", "encoding", "no-std"]
keywords = ["protocol-buffers", "grpc", "rpc", "serialization", "json"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
np_rpc = []
default = ["np_rpc"]

